new default step naming scheme, renamed DisplayValue reference -> text

--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/script/action-browser.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/script/action-browser.yaml
@@ -91,7 +91,7 @@ DisplayValue:
   icon: Print
   title: "Display"
   meta:
-    reference:
+    text:
       is: ObjectLocation
       by: Nominal
       editor: SelectStepEditor
