--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
@@ -69,6 +69,12 @@ LogicalNotTool:
   delegate: LogicalNot
 
 
+ConditionalExpressionTool:
+  is: RibbonTool
+  parent: LogicGroup
+  delegate: ConditionalExpression
+
+
 #######################################################################################################################
 
 
