--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
@@ -4,6 +4,7 @@ QueryController:
   is: DocumentController
   class: tech.kzen.auto.client.objects.document.query.QueryController$Wrapper
   type: Graph
+  attributeController: AttributeController
 
 
 #######################################################################################################################
