--- a/kzen-auto-js/package.json
+++ b/kzen-auto-js/package.json
@@ -1,32 +1,32 @@
 {
   "name": "kzen-auto-js",
   "dependencies": {
-    "@material-ui/core": "4.1.1",
-    "@material-ui/icons": "4.2.0",
+    "@material-ui/core": "4.2.1",
+    "@material-ui/icons": "4.2.1",
     "core-js": "3.1.4",
     "inline-style-prefixer": "5.1.0",
-    "lodash": "4.17.11",
+    "lodash": "4.17.15",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-select": "2.4.2",
+    "react-select": "3.0.4",
     "styled-components": "4.3.2"
   },
   "devDependencies": {
     "browser-sync": "2.26.7",
     "browser-sync-webpack-plugin": "2.2.2",
-    "browserify": "16.2.3",
-    "css-loader": "3.0.0",
+    "browserify": "16.3.0",
+    "css-loader": "3.1.0",
     "html-webpack-plugin": "3.2.0",
-    "karma": "4.1.0",
-    "karma-browserify": "6.0.0",
-    "karma-chrome-launcher": "2.2.0",
+    "karma": "4.2.0",
+    "karma-browserify": "6.1.0",
+    "karma-chrome-launcher": "3.0.0",
     "karma-mocha": "1.3.0",
     "karma-mocha-reporter": "2.2.5",
-    "mocha": "6.1.4",
+    "mocha": "6.2.0",
     "style-loader": "0.23.1",
     "watchify": "3.11.1",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4"
+    "webpack": "4.36.1",
+    "webpack-cli": "3.3.6"
   },
   "scripts": {
     "start": "webpack",
