--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/script/action-common.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/script/action-common.yaml
@@ -62,6 +62,7 @@ ConditionalExpression:
   class: tech.kzen.auto.server.objects.script.control.ConditionalExpression
   icon: Share
   title: "If"
+  display: ConditionalStepDisplay
   meta:
     condition:
       is: ObjectLocation
