added ControlTree for scripts, fixed StepSelectEditor predecessors for nested branches, added ConditionalStepDisplay else branch

--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/script/action-common.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/script/action-common.yaml
@@ -74,10 +74,12 @@ ConditionalExpression:
       is: List
       of: ObjectLocation
       by: Nominal
+      branch: 0
     else:
       is: List
       of: ObjectLocation
       by: Nominal
+      branch: 1
 
 
 ################################################################
