--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,21 @@
 javaVersion=11
 
-kotlinVersion=1.3.41
-nodeVersion=12.6.0
+kotlinVersion=1.3.50
+nodeVersion=12.9.1
 nodePluginVersion=1.3.1
 
 
-#kzenLibVersion=0.8.0
-kzenLibVersion=0.9.0-SNAPSHOT
+kzenLibVersion=0.9.0
+#kzenLibVersion=0.9.0-SNAPSHOT
 
 
-kotlinxIoVersion=0.1.11
+kotlinxIoVersion=0.1.13
 guavaVersion=28.0-jre
 dexxVersion=0.7
 
 seleniumVersion=3.141.59
 
-kotlinxCoroutinesCoreVersion=1.2.2
+kotlinxCoroutinesCoreVersion=1.3.0
 
 kotlinxHtmlVersion=0.6.12
 
