--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ nodeVersion=12.9.1
 nodePluginVersion=1.3.1
 
 
-kzenLibVersion=0.9.0
-#kzenLibVersion=0.9.0-SNAPSHOT
+#kzenLibVersion=0.9.0
+kzenLibVersion=0.10.0-SNAPSHOT
 
 
 kotlinxIoVersion=0.1.13
