--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/dataflow-edge.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/dataflow-edge.yaml
@@ -2,7 +2,7 @@
 #######################################################################################################################
 
 EdgesDefiner:
-  class: tech.kzen.auto.common.objects.document.query.EdgesDefiner
+  class: tech.kzen.auto.common.objects.document.graph.EdgesDefiner
 
 
 EdgeDescriptor:
