--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/query/query-dataflow.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/query/query-dataflow.yaml
@@ -57,5 +57,5 @@ StreamDataflow:
 
 
 DataflowWiring:
-  class: tech.kzen.auto.common.objects.document.query.DataflowWiring
+  class: tech.kzen.auto.common.objects.document.graph.DataflowWiring
 
