--- a/kzen-auto-js/package.json
+++ b/kzen-auto-js/package.json
@@ -4,6 +4,7 @@
     "@material-ui/core": "4.3.3",
     "@material-ui/icons": "4.2.1",
     "core-js": "3.2.1",
+    "cropperjs": "1.5.5",
     "inline-style-prefixer": "5.1.0",
     "lodash": "4.17.15",
     "react": "16.9.0",
