refactored to keep DocumentArchetype as abstract in auto-js

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -16,7 +16,7 @@ Document:
 # TODO: factor out DocumentArchetype (concrete) vs DocumentRoot (concrete)
 
 Script:
-#  abstract: true
+  abstract: true
   is: Document
   class: tech.kzen.auto.common.objects.document.script.ScriptDocument
   icon: PlaylistPlay
@@ -28,7 +28,7 @@ Script:
 
 
 Graph:
-#  abstract: true
+  abstract: true
   is: Document
   class: tech.kzen.auto.common.objects.document.graph.GraphDocument
   icon: DeviceHub
@@ -45,7 +45,7 @@ Graph:
 
 
 Feature:
-#  abstract: true
+  abstract: true
   is: Document
   class: tech.kzen.auto.common.objects.document.feature.FeatureDocument
   title: "Visual Target"
