--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
+# TODO: upgrade to Java 13 language level (Java 13 runtime is already used for screenshots to work properly on Ubuntu)
 javaVersion=11
 
 kotlinVersion=1.3.50
@@ -14,6 +15,7 @@ guavaVersion=28.1-jre
 dexxVersion=0.7
 
 seleniumVersion=3.141.59
+commonsCompressVersion=1.19
 
 kotlinxCoroutinesCoreVersion=1.3.1
 
