--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
 
 subprojects {
     group = 'tech.kzen.auto'
-    version = '0.10.0-SNAPSHOT'
+    version = '0.10.0'
 
     repositories {
         mavenLocal()
