--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/common.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/common.yaml
@@ -14,7 +14,7 @@ AttributeEditorWrapper:
   meta:
     objectLocation:
       is: ObjectLocation
-      by: SelfLocation
+      by: Self
 
 
 ################################################################
