--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ nodeVersion=12.10.0
 nodePluginVersion=1.3.1
 
 
-kzenLibVersion=0.10.1
-#kzenLibVersion=0.10.1-SNAPSHOT
+#kzenLibVersion=0.10.1
+kzenLibVersion=0.11.0-SNAPSHOT
 
 
 kotlinxIoVersion=0.1.14
