--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -54,6 +54,9 @@ Feature:
   icon: Crop
   directory: true
   meta:
+    objectLocation:
+      is: ObjectLocation
+      by: Self
     documentNotation:
       is: DocumentNotation
       by: Self
