added ScreenshotCropper for full fidelity cropping, refactoring

--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/feature/feature.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/feature/feature.yaml
@@ -1,8 +1,10 @@
 
 
 ScreenshotTaker:
-#  is: Action
-#  abstract: true
   class: tech.kzen.auto.server.objects.feature.ScreenshotTaker
+
+
+ScreenshotCropper:
+  class: tech.kzen.auto.server.objects.feature.ScreenshotCropper
 
 
