--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/script/action-browser.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/script/action-browser.yaml
@@ -74,6 +74,24 @@ SendKeys:
     text: String
 
 
+VisualSendKeys:
+  abstract: true
+  is: Action
+  class: tech.kzen.auto.server.objects.script.browser.VisualSendKeys
+  icon: Keyboard
+  title: "Visual Type"
+  text: ""
+  target:
+    type: Focus
+  meta:
+    text: String
+    target:
+      is: TargetSpec
+      by: TargetSpecDefiner
+      creator: TargetSpecCreator
+      editor: TargetSpecEditor
+
+
 FormSubmit:
   abstract: true
   is: Action
